--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: Sungpil Han
 locale: en_US
 description: Clinical Pharmacology and Therapeutics
-logo: site-logo.png
+logo: #site-logo.png
 search: true
 url: http://shanmdphd.github.io
 
