--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site wide configuration
 
-title: Sungpil Han
+title: shanmdphd.github.io
 locale: en_US
 description: Clinical Pharmacology and Therapeutics
 logo: #site-logo.png
