--- a/_config.yml
+++ b/_config.yml
@@ -50,15 +50,15 @@ owner:
   name: Sungpil Han
   avatar: bio-photo.png
   email: shan@acp.kr
-  disqus-shortname:
+  disqus-shortname: pil.han@gmail.com
   twitter: wreckord
   facebook: #username
   github: shanmdphd
   stackexchange: users/1748866/sungpil-han
-  linkedin: #username
+  linkedin: pil.han@gmail.com #username
   instagram: #username
   flickr: #username
-  tumblr: #username
+  tumblr: sungpil#username
   pinterest: #username
   weibo: #userid
   google:
