--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,14 +6,14 @@
 - title: CV
   url: /CV/
 
-- title: Articles
-  url: /articles/
+- title: Clinical Pharmacology
+  url: /CPT/
 
-- title: Blog
-  url: /blog/
+- title: Neuroimmunology
+  url: /NI/
 
-- title: Theme Setup
-  url: /theme-setup/
+- title: Life
+  url: /Life/
 
 - title: Search
   url: /search/
