--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@
 - title: Clinical Pharmacology
   url: /CPT/
 
-- title: Neuroimmunology
-  url: /NI/
+- title: Conferences
+  url: /Conferences/
 
 - title: Life
   url: /Life/
