--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@
 - title: Conferences
   url: /Conferences/
 
-- title: Life
-  url: /Life/
+- title: DataScience
+  url: /DataScience/
 
 - title: Search
   url: /search/
