--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: Sungpil Han, M.D/Ph.D
 locale: en_US
-description: Neuroimmunology, Data Science, Clinical Pharmacology and Therapeutics
+description: Clinical Pharmacology and Therapeutics, Data Science, Neuroimmunology
 logo: #site-logo.png
 search: true
 url: http://shanmdphd.github.io
