--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@
 - title: About
   url: /about/
 
+- title: Publication
+  url: https://scholar.google.com/citations?user=TUK927cAAAAJ&hl=en
+
 - title: CV
   url: /CV/
 
