--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,21 @@ future: true
 permalink:   pretty
 markdown:    kramdown
 kramdown:
-  extensions:
-    - autolink
-    - footnotes
-    - smart
+  auto_ids:       true
+  footnote_nr:    1
+  entity_output:  as_char
+  toc_levels:     1..6
+  smart_quotes:   lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
+
+  coderay:
+    coderay_wrap:              div
+    coderay_line_numbers:      inline
+    coderay_line_number_start: 1
+    coderay_tab_width:         4
+    coderay_bold_every:        10
+    coderay_css:               style
+
 highlighter: rouge
 sass:
   sass_dir: _sass
