--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,6 @@ kramdown:
   toc_levels:     1..6
   smart_quotes:   lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
-
   coderay:
     coderay_wrap:              div
     coderay_line_numbers:      inline
@@ -26,6 +25,9 @@ kramdown:
     coderay_tab_width:         4
     coderay_bold_every:        10
     coderay_css:               style
+redcarpet:
+  extensions: [autolink]
+
 
 highlighter: rouge
 sass:
