--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,23 +6,17 @@
 - title: CV
   url: /CV/
 
-- title: News
-  url: /News/
-
 - title: Publication
   url: https://scholar.google.com/citations?user=TUK927cAAAAJ&hl=en
 
-- title: CPT
-  url: /CPT/
+- title: News
+  url: /News/
 
-- title: Conferences
-  url: /Conferences/
-
-- title: Data Science
-  url: /DataScience/
-
-- title: tags
+- title: Blog
   url: /tags/
+
+- title: Personal
+  url: /Personal/
 
 - title: Search
   url: /search/
