--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
   url: /CV/
 
 - title: Publication
-  url: https://scholar.google.com/citations?user=TUK927cAAAAJ&hl=en
+  url: https://scholar.google.com/citations?user=TUK927cAAAAJ
 
 - title: News
   url: /News/
