--- a/_config.yml
+++ b/_config.yml
@@ -69,11 +69,11 @@ owner:
   avatar: bio-photo.png
   email: shan@acp.kr
   disqus-shortname: shanmdphd
-  twitter: wreckord
+  twitter: shanmdphd
   facebook: #username
   github: shanmdphd
-  stackexchange: users/1748866/sungpil-han
-  linkedin: pil.han@gmail.com #username
+  stackexchange: users/1943169
+  linkedin: shan@acp.kr #username
   instagram: #username
   flickr: #username
   tumblr: sungpil #username
