--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ owner:
   twitter: shanmdphd
   facebook: #username
   github: shanmdphd
-  stackexchange: users/1943169
+  stackexchange: http://stackexchange.com/users/1943169
   linkedin: shan@acp.kr #username
   instagram: #username
   flickr: #username
