--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ owner:
   facebook: #username
   github: shanmdphd
   stackexchange: http://stackexchange.com/users/1943169
-  linkedin: sungpilhan@amc.seoul.kr #username
+  linkedin: sungpilhan #username
   instagram: #username
   flickr: #username
   tumblr: sungpil #username
