--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,10 @@ baseurl: "" # does not include hostname
 future: true
 permalink:   pretty
 markdown:    kramdown
+highlighter: rouge
 kramdown:
+  input: GFM
+  syntax_highlighter: rouge
   auto_ids:       true
   footnote_nr:    1
   entity_output:  as_char
@@ -33,10 +36,6 @@ kramdown:
     coderay_bold_every:        10
     coderay_css:               style
 
-redcarpet:
-  extensions: [autolink]
-
-highlighter: rouge
 sass:
   sass_dir: _sass
   style: compressed
@@ -49,9 +48,6 @@ mathjax: true
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", ".less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md", "vendor"]
-
-
-# Octopress
 
 # Default extensions
 post_ext: md
