--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@
 - title: News
   url: /News/
 
-- title: Shiny 
-  url: /Shiny/
+- title: Apps 
+  url: /Apps/
 
 - title: Conferences
   url: /ConferencesBook/
