--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ locale: en_US
 description: Clinical Pharmacology and Therapeutics, Data Science, Neuroimmunology
 logo: #site-logo.png
 search: true
-#url: http://shanmdphd.github.io
+url: https://shanmdphd.github.io
 
 # 서버 작동
 detach:  false
